@@ -26,6 +26,7 @@ ChangeLog
 [+] * Introduce testing for python module.
 [-] * Fixed decoding of formatted EMS messages.
 [-] * Fixed reading of RTTL ringtones.
+[-] * Fixed crash with too many animation frames.
     
 20090109 - 1.22.90
 
